--- a/SaveLoadSort/SaveLoadSort.vcxproj
+++ b/SaveLoadSort/SaveLoadSort.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{5cc63341-c430-430b-bc88-86cebceb8cd1}</ProjectGuid>
-    <RootNamespace>Shooting2</RootNamespace>
+    <ProjectGuid>{0cad6927-df04-4bf3-bf70-e8e07393cce1}</ProjectGuid>
+    <RootNamespace>SaveLoadSort</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -139,17 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Shooting\Console.cpp" />
-    <ClCompile Include="Enemy.cpp" />
-    <ClCompile Include="EnemyMissile.cpp" />
+    <ClCompile Include="Console.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Missile.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Shooting\Console.h" />
-    <ClInclude Include="Enemy.h" />
-    <ClInclude Include="EnemyMissile.h" />
-    <ClInclude Include="Missile.h" />
+    <ClInclude Include="Console.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
